--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -294,7 +294,7 @@
 {% if header_section.show_survey_section %}
 <section class="b7 anclaBlock" id="encuesta">
     <!-- Que todo sea -->
-    <a href="#" class="grilla">
+    <a href="{% url 'landing:survey_view' %}" class="grilla">
         <div class="b7Info">
             <h3 class="gTitle">Tu opinión es importante</h3>
             <div class="gParrafo">
