--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -165,7 +165,9 @@
                                                 data-img="{{exhibitor.image.url}}"
                                                 >
                                                 <h6><img src="/static/web/img/expositor.png" alt="" width="16">{{exhibitor.name}}</h6>
+                                                {% comment %}
                                                 <span>- CCL</span>
+                                                {% endcomment %}
                                             </a>
                                         </li>
                                         {% endfor %}
