--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -165,7 +165,9 @@
                                                 data-img="{{exhibitor.image.url}}"
                                                 >
                                                 <h6><img src="/static/web/img/expositor.png" alt="" width="16">{{exhibitor.name}}</h6>
+                                                {% comment %}
                                                 <span>- CCL</span>
+                                                {% endcomment %}
                                             </a>
                                         </li>
                                         {% endfor %}
@@ -294,7 +296,7 @@
 {% if header_section.show_survey_section %}
 <section class="b7 anclaBlock" id="encuesta">
     <!-- Que todo sea -->
-    <a href="#" class="grilla">
+    <a href="{% url 'landing:survey_view' %}" class="grilla">
         <div class="b7Info">
             <h3 class="gTitle">Tu opinión es importante</h3>
             <div class="gParrafo">
