FIX - credentials, survey

--- a/src/templates/landing/credencial.html
+++ b/src/templates/landing/credencial.html
@@ -40,7 +40,7 @@
                             <img src="/static/web/img/clear.svg" alt="">
                         </a>
                     </div>
-                    <button type="submit" class="gButton b10GenerateCred">Generara credencial</button>
+                    <button type="submit" class="gButton b10GenerateCred">Generar credencial</button>
                     <a href="{% url 'landing:event' %}" class="b10Omitir">Omitir</a>
                 </form>
             </div>
