--- a/src/templates/landing/encuesta-gracias.html
+++ b/src/templates/landing/encuesta-gracias.html
@@ -10,10 +10,10 @@
 <section class="b11 pageEncuestaGracias scrollWrap">
     <div class="b11Left scrollItem">
         <div class="b11LeftContent">
-            <a href="#" class="gReturn">Regresar</a>
+            <a href="#" onclick="history.back()" class="gReturn">Regresar</a>
             <h1 class="gTitle">Tu opinión es importante</h1>
             <div class="gParrafo">
-                <p>Evento: El Poder de la Data</p>
+                <p>{{home_page.main_title}}</p>
             </div>
         </div>
     </div>
