--- a/src/templates/landing/encuesta.html
+++ b/src/templates/landing/encuesta.html
@@ -10,12 +10,10 @@
 <section class="b11 pageEncuesta">
     <div class="b11Left">
         <div class="b11LeftContent">
-            <a href="#" class="gReturn">Regresar</a>
+            <a href="##" onClick="history.go(-1); return false;" class="gReturn">Regresar</a>
             <h1 class="gTitle">Tu opinión es importante</h1>
-            {% comment %}
-            {% endcomment %}
             <div class="gParrafo">
-                <p>Evento: El Poder de la Data</p>
+                <p>{{home_page.main_title}}</p>
             </div>
         </div>
     </div>
